--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.data.redis.connect-timeout=10s
 spring.data.redis.database=0
 #spring.data.redis.username=redis
 #spring.data.redis.password=redis
+
+management.endpoints.web.exposure.include=health
+
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
+
+management.health.redis.enabled=true
