--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ management.endpoint.health.enabled=true
 management.endpoint.health.show-details=always
 
 management.health.redis.enabled=true
+
+spring.cache.type=redis
+spring.cache.redis.use-key-prefix=true
+spring.cache.redis.key-prefix=cache:
+spring.cache.redis.enable-statistics=true
+spring.cache.redis.cache-null-values=true
+spring.cache.redis.time-to-live=60s
+
